# NeuralOperators

./: .buildinfo  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  coverage.html  examples.html  genindex.html  index.html  modules.html  nos.benchmarks.html  nos.data.html  nos.data.indicator_function.html  nos.data.transmission_loss.html  nos.html  nos.metrics.html  nos.networks.attention.html  nos.networks.html  nos.operators.html  nos.physics.html  nos.plots.html  nos.preprocessing.html  nos.trainers.html  nos.transforms.html  nos.utils.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  sizes.py
.docker/: Dockerfile
.github/: pull_request_template.md
.github/workflows/: ci.yml  ci_test_data.yml  container.yml  doc.yml  docker.yml  linters.yml  unit_tests.yml
_sources/: modules.rst.txt  nos.benchmarks.rst.txt  nos.data.indicator_function.rst.txt  nos.data.rst.txt  nos.data.transmission_loss.rst.txt  nos.metrics.rst.txt  nos.networks.attention.rst.txt  nos.networks.rst.txt  nos.operators.rst.txt  nos.physics.rst.txt  nos.plots.rst.txt  nos.preprocessing.rst.txt  nos.rst.txt  nos.trainers.rst.txt  nos.transforms.rst.txt  nos.utils.rst.txt
_static/codecov/: class_index.html  d_040e78c194e497af_scaling_py.html  d_431cb39dc9496c7d_nested_dataclass_to_dict_py.html  d_431cb39dc9496c7d_unique_id_py.html  d_7e8216966b2e3943_transmission_loss_compact_py.html  d_7e8216966b2e3943_transmission_loss_exp_py.html  d_7e8216966b2e3943_transmission_loss_py.html  d_7e8216966b2e3943_transmission_loss_wave_py.html  d_8650266d82634dfb_c_shape_py.html  d_8650266d82634dfb_indicator_to_tl_py.html  d_8650266d82634dfb_params_to_indicator_py.html  d_8dbc7d2850ae11b9_low_pass_filter_py.html  d_93093ff38057b02c_deep_dot_operator_py.html  d_93093ff38057b02c_deep_neural_operator_py.html  d_93093ff38057b02c_deep_o_fno_py.html  d_93093ff38057b02c_deep_o_net_py.html  d_93093ff38057b02c_deep_root_operator_py.html  d_93093ff38057b02c_fourier_neural_operator_py.html  d_93093ff38057b02c_mean_stack_neural_operator_py.html  d_93093ff38057b02c_operator_py.html  d_93093ff38057b02c_utils_py.html  d_99aac0089c5f15d8_error_metrics_py.html  d_99aac0089c5f15d8_metric_py.html  d_99aac0089c5f15d8_operator_metrics_py.html  d_a94113ed293c43ea_benchmark_py.html  d_d726faacd801a058_data_py.html  d_d726faacd801a058_metrics_py.html  d_d726faacd801a058_training_curves_py.html  d_d726faacd801a058_transmission_loss_py.html  d_d726faacd801a058_utils_py.html  d_dfcfe80011fec8d7_residual_py.html  d_e3bc015ca2131802_average_metric_py.html  d_e3bc015ca2131802_trainer_py.html  d_e3bc015ca2131802_util_py.html  function_index.html  index.html  status.json  z_040e78c194e497af_min_max_scale_py.html  z_040e78c194e497af_quantile_scaler_py.html  z_431cb39dc9496c7d_nested_dataclass_to_dict_py.html  (+15 more)
benchmark/: README.md  main.py
benchmarks/: benchmark.py  main.py
benchmarks/conf/: config.yaml
benchmarks/configs/: config.yaml
data/: dset_c_1.ini  dset_c_1_transmission_loss_dataset.csv  dset_c_2.ini  dset_c_2_transmission_loss_dataset.csv
doc/source/: conf.py  coverage.rst  index.rst  modules.rst  nos.data.helmholtz.domain_properties.rst  nos.data.helmholtz.rst  nos.data.rst  nos.rst  nos.utility.rst
docs/source/: conf.py  modules.rst
final/: plot_final.py  process_operators.py
final/reduced/: plot_boxplots.py  plot_lines.py
final/transmission_loss/: plot_boxplots.py  plot_lines.py
models/DeepNeuralOperator_2024_03_27_00_57_45/: model_parameters.json
models/DeepONet_2024_03_10_20_23_22/: model_parameters.json
run/2024_04_01_14_50_05-915e8963-b3ba-4027-87f0-d433682f0e78/: training.csv  training_config.json
run/2024_04_01_15_16_53-685b8b62-458d-4dc1-9b9f-530a8cb6ad03/: training_config.json
scripts/: estimate_boundary.py  optimize_operator.py  plot_losses.py  run_pi_transformer.py  show_operator.py  show_pulsating_sphere.py  show_pulsating_sphere_2.py  smooth_set.py  train_operator.py  train_partial.py  train_pi.py  train_pi_random.py  train_pi_random_deprc.py  train_pi_wo.py  train_pressure_boundary.py  train_pulsating.py  train_scaling_net.py  visualize_paper.py  visualize_pi.py  visualize_pulsating_sphere.py  visualize_set.py  visualize_single_run.py  visualize_test_set.py
scripts/boundary/: train_pressure_boundary.py  train_pressure_boundary_reduced.py
scripts/data/: create_dataset.py  domain.ini  run_on_docker.py
scripts/plot/: plot_losses.py  pulsating_sphere_dash.py  show_operator.py  show_pulsating_sphere.py  show_pulsating_sphere_2.py  visualite_pulsating_sphere_dataset.py  visualize_dataset.py  visualize_pi.py  visualize_pulsating_sphere.py  visualize_self_supervised_pulsating_sphere.py  visualize_set.py
scripts/pressure/: train_pi.py  train_pi_random.py  train_pi_random_force_one.py  train_pi_random_v2.py  train_pi_random_v3.py  train_pi_v2.py  train_scaling_net.py  train_self_supervised.py
scripts/transmission_loss/: benchmark.py  create_smooth_set.py  eval_multirun.py  train_operator.py  train_partial.py
src/: dummy.py
src/nos/: __init__.py
src/utility/: __init__.py  decorators.py  progress_monitor.py  unique_id.py  xml_dict.py
standalone/data/: create_dataset.py  domain.ini  meshing_dolfinx.ipynb  run_file_in_container.sh  run_on_docker.py
templates/: domain_c_shaped.ini  domain_cylindrical.ini  domain_none.ini
test/: conftest.py  test_dummy.py  test_pytest.py
test/benchmark/: test_benchmark.py  test_transmission_loss.py
test/data/: test_transmission_loss.py
test/metrics/: test_metric.py  test_operator_metrics.py  tets_error_metrics.py
test/operators/: fixtures.py
test/transforms/: fixtures.py  test_compose.py
test/utility/: test_bounding_box.py  test_progress_moitor.py  test_unique_id.py
tests/: conftest.py  test_pytest.py
tests/benchmarks/: test_benchmark.py  test_transmission_loss.py
tests/data/: fixtures.py  test_pulsating_sphere.py  test_transmission_loss.py  test_transmission_loss_wave.py
tests/exemplar_outputs/: fixtures.py
tests/metrics/: test_metric.py  (+2 more)
(+867 files in other folders)
