[project]
name = "Neural-Operators"
version = "0.1.1"
authors = [
    { name = "Jakob Elias Wagner", email = "mail@jakob-wagner.org" },
]
description = "Use Neural Operators for parameterized sonic crystals"
readme = "README.md"
license = { file = "LICENSE" }

keywords = [
    "Artificial Intelligence",
    "Mathematics",
    "Physics",
    "Neural Operators",
    "Helmholtz",
    "Sonic Crystal",
]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "numpy>=1.26.2",
    "matplotlib>=3.8.2",
    "seaborn",
    "pandas",
    "loguru",
    "hydra-core>=1.3.2",
    "optuna-dashboard>=0.14.0",
    "torch>=2.1.0",
    "continuity @ git+https://github.com/aai-institute/continuity.git"
]

[project.optional-dependencies]
optimize = [
    "optuna",
    "mlflow",
    "hydra-core>=1.3.0",
]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "black",
    "ruff",
    "isort",
    "pre-commit",
]
doc = [
    "sphinx",
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 11
skip_glob = [
    ".github/*",
    ".idea/*",
    ".pytest_cache/*",
    "data/*",
    "doc/*",
    "models/*",
    "venv/*",
]

[tool.ruff]
include = ["All"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 119
indent-width = 4

[tool.coverage.report]
omit = [
    # omit anything in a .local directory anywhere
    '*/.local/*',
    '__init__.py',
    '.venv/*'
]
exclude_also = [
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
skip_empty = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (> 5s)",
]
